# PezMax-One

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  SOKUOU_ENGINE.md  SOKUOU_USAGE.md  build-backend.bat  build-backend.sh  build.bat  build.sh  后端接口列表.md
PezMax-App/: Cargo.toml
PezMax-App/src/: app.rs
PezMax-App/src/api/: auth.rs  client.rs  favorite.rs  mod.rs  models.rs  notification.rs  report.rs  user.rs
PezMax-App/src/components/: sidebar.rs  toast.rs  topbar.rs
PezMax-App/src/pages/: bookmarks.rs  downloads.rs  favorites.rs  file_detail.rs  file_explorer.rs  forget_password.rs  home.rs  login.rs  notifications.rs  profile.rs  register.rs  report.rs  security.rs  settings.rs
PezMax-App/src/theme/: mod.rs
docs/: 设计文档.md
repowiki/knowledge/zh/: _index.yaml
repowiki/knowledge/zh/PezMax 学习资料管理系统（后端 + 桌面客户端）/: _module.yaml
repowiki/knowledge/zh/基于 Logback + SLF4J 的若依操作日志体系/: 基于 Logback + SLF4J 的若依操作日志体系.md
repowiki/knowledge/zh/基于若依框架的统一错误处理体系/: 基于若依框架的统一错误处理体系.md
repowiki/knowledge/zh/构建与制品管理：Maven 多模块 + Docker Compose + Electron-builder/: 构建与制品管理：Maven 多模块 + Docker Compose + Electron-builder.md
repowiki/zh/content/: 快速开始.md  数据库设计.md  项目概述.md
repowiki/zh/content/API 接口文档/: 书签管理接口.md  用户管理接口.md  用户认证接口.md  监控运维接口.md  通知推送接口.md
repowiki/zh/content/后端开发指南/: 后端开发指南.md  数据库设计与操作.md  项目结构与模块划分.md
repowiki/zh/meta/: repowiki-metadata.json
src/: app.rs  main.rs
src/api/: auth.rs  bookmark.rs  client.rs  download.rs  favorite.rs  file.rs  models.rs  report.rs  user.rs
src/components/: action_bar.rs  mod.rs  sidebar.rs  toast.rs  topbar.rs
src/pages/: bookmarks.rs  browse.rs  community.rs  downloads.rs  favorites.rs  file_explorer.rs  forget_password.rs  home.rs  login.rs  mod.rs  notifications.rs  profile.rs  register.rs  report.rs  security.rs  settings.rs
src/pdf/: mod.rs
src/sokuou/: NOTE.md  animator.rs  easing.rs  mod.rs  progress.rs  spring.rs  uwp.rs
src/theme/: mod.rs
(+125 files in other folders)
