[package]
name = "pezmax-egui"
version = "0.1.0"
description = "PezMax - 高性能试卷资源管理桌面客户端 (egui + Metro Design)"
edition = "2021"

[dependencies]
# GUI framework
egui = "0.31"
eframe = "0.31"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Image loading
image = "0.25"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# URL parsing
url = "2"

# Clipboard
arboard = "3"

# Base64
base64 = "0.22"

# File dialog
rfd = "0.15"

# ── PDF 预览 ──────────────────────────────────────────────
# pdfium-render = Chrome 同款 PDF 引擎，工业级渲染质量
# thread_safe：启用线程安全渲染，支持后台线程渲染
pdfium-render = { version = "0.8", features = ["thread_safe", "sync"] }

# ── 系统交互 ──────────────────────────────────────────────
# 用系统默认浏览器打开外部链接（书签等）
webbrowser = "1"

# ── 本地持久化 ────────────────────────────────────────────
# 嵌入式 KV 数据库（本地下载记录）
sled = "0.34"
# 配置文件持久化（用户设置）
confy = "0.6"